Implement tab screenshot feature

--- a/popup.html
+++ b/popup.html
@@ -1,30 +1,33 @@
 <!doctype html>
 <html>
-  <head>
+
+<head>
     <title>Imgrab</title>
     <style type="text/css">
-      body {
-        margin: 10px;
-        white-space: nowrap;
-      }
+        body {
+            margin: 10px;
+            white-space: nowrap;
+        }
 
-      h1 {
-        font-size: 15px;
-      }
+        h1 {
+            font-size: 15px;
+        }
 
-      #container {
-        align-items: center;
-        display: flex;
-        justify-content: space-between;
-      }
+        #container {
+            align-items: center;
+            display: flex;
+            justify-content: space-between;
+        }
     </style>
-    <script src="popup.js"></script>
-  </head>
+</head>
 
-  <body>
+<body>
     <h1>Imgrab</h1>
     <div id="container">
-
+        <button id="screen">screen</button>
+        <button id="snippet">snippet</button>
     </div>
-  </body>
+    <script type="text/javascript" src="popup.js"></script>
+</body>
+
 </html>
