Fix badge updating per-tab; add success badge

--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Imgrab</title>
+    <title>imgrab</title>
     <style type="text/css">
         body {
             margin: 10px;
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <h1>Imgrab</h1>
+    <h1>imgrab</h1>
     <div id="container">
         <button id="screen">screen</button>
         <button id="snippet">snippet</button>
